Set the title for the monthly transactions activity

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,11 +13,12 @@
         <activity android:name=".ui.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".ui.MonthlyTransactionsActivity"></activity>
+        <activity android:name=".ui.MonthlyTransactionsActivity"
+            android:label="@string/monthly_transactions_graph"
+            ></activity>
     </application>
 
 </manifest>
