--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,10 +37,14 @@ dependencies {
     compile 'com.github.PhilJay:MPAndroidChart:v3.0.0-beta1'
 
     // Dagger
-    compile 'com.google.dagger:dagger:2.11'
+    compile "com.google.dagger:dagger:2.11"
+    testCompile "com.google.dagger:dagger-compiler:2.11"
     annotationProcessor 'com.google.dagger:dagger-compiler:2.11'
 
     // Tests
-    testCompile "org.robolectric:robolectric:3.3.2"
+    testCompile "org.robolectric:robolectric:3.4.2"
     testCompile "org.mockito:mockito-core:2.8.9"
+    testCompile ("com.squareup.assertj:assertj-android:1.1.0") {
+        exclude group: "com.android.support", module: "support-annotations"
+    }
 }
