--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,14 +29,23 @@ android {
 
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
-    testImplementation 'junit:junit:4.12'
     implementation 'com.android.support:appcompat-v7:23.4.0'
-    // List of transactions
+
+    // List
     implementation 'com.android.support:cardview-v7:23.4.0'
     implementation 'com.android.support:recyclerview-v7:23.4.0'
+
     // For charts
     implementation 'com.github.PhilJay:MPAndroidChart:v3.0.0-beta1'
+
+    // RxJava
+    implementation 'io.reactivex.rxjava2:rxandroid:2.0.2'
+    implementation 'io.reactivex.rxjava2:rxjava:2.1.9'
+
     // Dagger
     implementation 'com.google.dagger:dagger:2.11'
     annotationProcessor 'com.google.dagger:dagger-compiler:2.11'
+
+    // Tests
+    testImplementation 'junit:junit:4.12'
 }
