--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,7 +8,8 @@ android {
     defaultConfig {
         applicationId "com.jiahaoliuliu.akami"
         minSdkVersion 15
-        targetSdkVersion 27
+        // TODO: Set it to 27 and implement runtime permissions
+        targetSdkVersion 22
         versionCode 5
         versionName "1.4"
     }
