Trying to create replacement on kotlin for expenses

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -54,6 +54,7 @@ dependencies {
 
     // Tests
     testImplementation 'junit:junit:4.12'
+    implementation 'org.jetbrains:annotations:15.0'
 }
 repositories {
     mavenCentral()
